additional spacing fixes and bootstrap cols adjusments

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -6164,8 +6164,6 @@ section.lazy-placeholder:after {
   color: #767676 !important;
 }
 .cid-rnDSMih6ar {
-  padding-top: 25px;
-  padding-bottom: 50px;
   background-color: #ffffff;
 }
 .cid-rnDSMih6ar .mbr-section-subtitle {
